--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
     name = Aman Thakral
 
 [merge]
-    tool = diffmerge
+	tool = meld
 
 [mergetool "diffmerge"]
     cmd = /usr/local/bin/dmerge "$PWD/$LOCAL" "$PWD/$BASE" "$PWD/$REMOTE" "$PWD/$MERGED" 
@@ -31,3 +31,5 @@
     df = diff
     lg = log -p
     rb = rebase
+[diff]
+	guitool = meld
